--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,17 +14,17 @@
 
 <div class="container mt-3">
 <!-- Custom install notification -->
-<!--  <div class="d-flex alert alert-primary" role="alert" *ngIf="deferredPrompt != null">-->
-<!--    <div>-->
-<!--      <img src="./assets/images/pwa.png" alt="pwa logo" />-->
-<!--    </div>-->
-<!--    <div class="d-flex flex-column justify-content-center ms-3">-->
-<!--      <div>Cool! You`re device and application support PWA.</div>-->
-<!--      <div>-->
-<!--        <button mat-raised-button color="primary" (click)="installPwa()">Install me</button>-->
-<!--      </div>-->
-<!--    </div>-->
-<!--  </div>-->
+  <div class="d-flex alert alert-primary" role="alert" *ngIf="deferredPrompt != null">
+    <div>
+      <img src="./assets/images/pwa.png" alt="pwa logo" />
+    </div>
+    <div class="d-flex flex-column justify-content-center ms-3">
+      <div>Cool! You`re device and application support PWA.</div>
+      <div>
+        <button mat-raised-button color="primary" (click)="installPwa()">Install me</button>
+      </div>
+    </div>
+  </div>
 
   <div class="d-flex justify-content-center">
     <router-outlet></router-outlet>
